--- a/project.html
+++ b/project.html
@@ -800,18 +800,18 @@
                     <!-- poster design -->
                     <div class="tab-pane fade" id="nav-content-writing" role="tabpanel" aria-labelledby="nav-content-writing-tab" tabindex="0">
                         <div class="row">
-                            <div class="col-lg-6">
+                            <!-- <div class="col-lg-6">
                                 <div class="latest-portfolio-card-style-two image-box-hover tmp-scroll-trigger tmp-fade-in animation-order-1">
                                     <div class="portfoli-card-img">
                                         <div class="img-box v2">
-                                            <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="project-details.html">
+                                            <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="https://www.behance.net/harshankrishdev" target="_blank">
                                                 <img class="w-100" src="assets/images/latest-portfolio/portfoli-img-1.jpg" alt="Thumbnail">
                                             </a>
                                         </div>
                                     </div>
                                     <div class="portfolio-card-content-wrap">
                                         <div class="content-left">
-                                            <h3 class="portfolio-card-title"><a href="project-details.html">Crypto Exchange 
+                                            <h3 class="portfolio-card-title"><a href="https://www.behance.net/harshankrishdev" target="_blank"">Crypto Exchange 
                                                     Posters</a></h3>
                                             <div class="tag-items">
                                                 <ul>
@@ -824,7 +824,7 @@
                                                 </ul>
                                             </div>
                                         </div>
-                                        <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="portfolio-details.html">
+                                        <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="https://www.behance.net/harshankrishdev" target="_blank">
                                             <span class="icon-reverse-wrapper">
                                     <span class="btn-text">View design</span>
                                             <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
@@ -833,9 +833,9 @@
                                         </a>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <div class="col-lg-6">
-                                <div class="latest-portfolio-card-style-two image-box-hover tmp-scroll-trigger tmp-fade-in animation-order-2">
+                                <div class="latest-portfolio-card-style-two image-box-hover tmp-scroll-trigger tmp-fade-in animation-order-1">
                                     <div class="portfoli-card-img">
                                         <div class="img-box v2">
                                             <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="https://www.behance.net/gallery/216373135/Socialmedia-Poster-1" target="_blank"">
@@ -869,7 +869,7 @@
                                 </div>
                             </div>
                             <div class="col-lg-6">
-                                <div class="latest-portfolio-card-style-two image-box-hover tmp-scroll-trigger tmp-fade-in animation-order-3">
+                                <div class="latest-portfolio-card-style-two image-box-hover tmp-scroll-trigger tmp-fade-in animation-order-2">
                                     <div class="portfoli-card-img">
                                         <div class="img-box v2">
                                             <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="https://www.behance.net/gallery/217201425/Edutech-SocialMedia-Posters" target="_blank">
