--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <nav class="tmp-mainmenu-nav d-none d-xl-block">
                             <ul class="tmp-mainmenu">
                                 <li>
-                                    <a href="#">Home
+                                    <a href="index.html">Home
                                     </a>
                                 </li>
                                 <li>
@@ -164,7 +164,7 @@
                 </div>
                 <ul class="tmp-mainmenu">
                     <li>
-                        <a href="#">Home
+                        <a href="index.html">Home
                         </a>
                     </li>
                     <li>
