--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
                                     <a href="#service">Services</a>
                                 </li>
                                 <li>
+                                    <a href="#certification">Certificate</a>
+                                </li>
+                                <li>
                                     <a href="#contact">Contact</a>
                                 </li>
                             </ul>
@@ -174,6 +177,9 @@
                     </li>
                     <li>
                         <a href="#service">Services</a>
+                    </li>
+                    <li>
+                        <a href="#certification">Certificate</a>
                     </li>
                     <li>
                         <a href="#contact">Contact</a>
@@ -1401,6 +1407,84 @@
     </section>
     <!-- Tpm My Skill Area End -->
 
+     <!-- Tpm Latest Portfolio Start -->
+     <section class="tmp-latest-portfolio tmp-section-gap" id="certification">
+        <div class="container">
+            <div class="header-top-inner">
+                <div class="section-head text-align-left">
+                    <div class="section-sub-title tmp-scroll-trigger tmp-fade-in animation-order-1">
+                        <span class="subtitle">Certification</span>
+                    </div>
+                    <h2 class="title split-collab tmp-scroll-trigger tmp-fade-in animation-order-2">Leveling Up with <br> Certifications</h2>
+                </div>
+                <div class="discription-area tmp-scroll-trigger tmp-fade-in animation-order-3">
+                    <p class="description">Successfully completed certification programs to enhance my skills and professional knowledge.
+                    </p>
+                </div>
+            </div>
+            <div class="row g-5">
+                <div class="col-lg-6 col-md-6 col-12">
+                    <div class="latest-portfolio-card-style-two tmponhover tmp-scroll-trigger tmp-fade-in animation-order-1">
+                        <div class="portfoli-card-img">
+                            <div class="img-box v2">
+                                <a href="https://www.udemy.com/certificate/UC-76c3d113-84ba-487c-96ce-68c22959429f/" target="_blank">
+                                    <img class="img-primary hidden-on-mobile" src="assets/images/latest-portfolio/portfoli-img-5.jpg" alt="Blog Thumbnail">
+                                    <img class="img-secondary" src="assets/images/latest-portfolio/portfoli-img-5.jpg" alt="BLog Thumbnail">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="portfolio-card-content-wrap">
+                            <div class="content-left">
+                                <h3 class="portfolio-card-title"><a href="https://www.udemy.com/certificate/UC-76c3d113-84ba-487c-96ce-68c22959429f/" target="_blank"> Master Mobile and Web Design, UI/UX Design, HTML, and CSS</a>
+                                </h3>
+                                <div class="tag-items">
+                                    <ul>
+                                        <li>
+                                            <a href="#" class="tag-item">Udemy</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="tag-item">Online</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-12">
+                    <div class="latest-portfolio-card-style-two tmponhover tmp-scroll-trigger tmp-fade-in animation-order-2">
+                        <div class="portfoli-card-img">
+                            <div class="img-box v2">
+                                <a href="https://drive.google.com/file/d/16_VhoBVNEhYWIecKq-TxkebIdt-y0arr/view?usp=sharing" target="_blank">
+                                    <img class="img-primary hidden-on-mobile" src="assets/images/latest-portfolio/portfoli-img-6.jpg" alt="Blog Thumbnail">
+                                    <img class="img-secondary" src="assets/images/latest-portfolio/portfoli-img-6.jpg" alt="BLog Thumbnail">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="portfolio-card-content-wrap">
+                            <div class="content-left">
+                                <h3 class="portfolio-card-title"><a href="https://drive.google.com/file/d/16_VhoBVNEhYWIecKq-TxkebIdt-y0arr/view?usp=sharing" target="_blank"> MERN Stack Certification | Full Stack ReactJS, NodeJS, MongoDB</a>
+                                </h3>
+                                <div class="tag-items">
+                                    <ul>
+                                        <li>
+                                            <a href="#" class="tag-item">Skill Safari</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="tag-item">Coimbatore</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </section>
+    <!-- Tpm Latest Portfolio End -->
+
 
  <!-- Start Footer Area  -->
  <footer class="footer-area footer-style-one-wrapper  tmp-section-gap" id="contact">
@@ -1435,6 +1519,9 @@
                             </li>
                             <li>
                                 <a href="#service">Services</a>
+                            </li>
+                            <li>
+                                <a href="#certification">Certificate</a>
                             </li>
                             <li>
                                 <a href="#contact">Contact Us</a>
