--- a/project.html
+++ b/project.html
@@ -46,6 +46,9 @@
                                     <a href="index.html">Services</a>
                                 </li>
                                 <li>
+                                    <a href="index.html">Certificate</a>
+                                </li>
+                                <li>
                                     <a href="index.html">Contact</a>
                                 </li>
                             </ul>
@@ -177,6 +180,9 @@
                     </li>
                     <li>
                         <a href="index.html">Services</a>
+                    </li>
+                    <li>
+                        <a href="index.html">Certificate</a>
                     </li>
                     <li>
                         <a href="index.html">Contact</a>
@@ -984,6 +990,9 @@
                                 </li>
                                 <li>
                                     <a href="index.html">Services</a>
+                                </li>
+                                <li>
+                                    <a href="index.html">Certificate</a>
                                 </li>
                                 <li>
                                     <a href="index.html">Contact Us</a>
