--- a/project.html
+++ b/project.html
@@ -679,6 +679,9 @@
                                                         <li>
                                                             <a href="#" class="tag-item">Landing Page</a>
                                                         </li>
+                                                        <li>
+                                                            <a href="#" class="tag-item">Redesign</a>
+                                                        </li>
                                                     </ul>
                                                 </div>
                                             </div>
