--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
                                     <span class="cd-headline clip is-full-width">
                                         <span class="cd-words-wrapper">
                                             <b class="is-visible theme-gradient">UI/UX Designer</b>
+                                            <b class="is-hidden theme-gradient">UI/UX Developer</b>
                                             <b class="is-hidden theme-gradient">Visual Designer</b>
                                             <b class="is-hidden theme-gradient">Web Designer</b>
                                             <b class="is-hidden theme-gradient">Mobile Designer</b>
