--- a/index.html
+++ b/index.html
@@ -395,14 +395,17 @@
                             <li>
                                 <button class="nav-link" id="nav-branding-tab" data-bs-toggle="tab" data-bs-target="#nav-branding" type="button" role="tab" aria-controls="nav-branding" aria-selected="false">Web Design</button>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <button class="nav-link" id="nav-design-tab" data-bs-toggle="tab" data-bs-target="#nav-design" type="button" role="tab" aria-controls="nav-design" aria-selected="false">Case Study</button>
-                            </li>
+                            </li> -->
                             <li>
                                 <button class="nav-link" id="nav-content-writing-tab" data-bs-toggle="tab" data-bs-target="#nav-content-writing" type="button" role="tab" aria-controls="nav-content-writing" aria-selected="false">Poster Design</button>
                             </li>
                             <li>
                                 <button class="nav-link" id="nav-marketing-tab" data-bs-toggle="tab" data-bs-target="#nav-marketing" type="button" role="tab" aria-controls="nav-marketing" aria-selected="false">Logo Design</button>
+                            </li>
+                            <li>
+                                <button class="nav-link" id="nav-video-tab" data-bs-toggle="tab" data-bs-target="#nav-video" type="button" role="tab" aria-controls="nav-video" aria-selected="false">Video Works</button>
                             </li>
                         </ul>
                     </nav>
@@ -1069,6 +1072,81 @@
                                         </div>
                                     </div>
                                 </div> -->
+                            </div>
+                        </div>
+
+                         <!-- video design -->
+                         <div class="tab-pane fade" id="nav-video" role="tabpanel" aria-labelledby="nav-video-tab" tabindex="0">
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <div class="latest-portfolio-card-style-two image-box-hover tmp-scroll-trigger tmp-fade-in animation-order-1">
+                                        <div class="portfoli-card-img">
+                                            <div class="img-box v2">
+                                                <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="https://drive.google.com/file/d/14dkZRKyC5RHTss8Q-71cuS-95A1T35HP/view?usp=sharing" target="_blank">
+                                                    <img class="w-100" src="assets/images/latest-portfolio/video-1.jpg" alt="Thumbnail">
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div class="portfolio-card-content-wrap">
+                                            <div class="content-left">
+                                                <h3 class="portfolio-card-title"><a href="https://drive.google.com/file/d/14dkZRKyC5RHTss8Q-71cuS-95A1T35HP/view?usp=sharing" target="_blank"> GlamGlow Beauty Product
+                                                        Ads</a></h3>
+                                                <div class="tag-items">
+                                                    <ul>
+                                                        <li>
+                                                            <a href="#" class="tag-item">Premiere Pro</a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="#" class="tag-item">Ads</a>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                            <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="https://drive.google.com/file/d/14dkZRKyC5RHTss8Q-71cuS-95A1T35HP/view?usp=sharing" target="_blank">
+                                                <span class="icon-reverse-wrapper">
+                                        <span class="btn-text">Play Video</span>
+                                                <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
+                                                <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
+                                                </span>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="latest-portfolio-card-style-two image-box-hover tmp-scroll-trigger tmp-fade-in animation-order-2">
+                                        <div class="portfoli-card-img">
+                                            <div class="img-box v2">
+                                                <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="https://drive.google.com/file/d/1USPIfIWa2FNMErRQitn6Ds3VdgIPLLHF/view?usp=sharing" target="_blank">
+                                                    <img class="w-100" src="assets/images/latest-portfolio/video-2.jpg" alt="Thumbnail">
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div class="portfolio-card-content-wrap">
+                                            <div class="content-left">
+                                                <h3 class="portfolio-card-title"><a href="https://drive.google.com/file/d/1USPIfIWa2FNMErRQitn6Ds3VdgIPLLHF/view?usp=sharing" target="_blank">2d Animation for
+                                                        Ecommerce</a></h3>
+                                                <div class="tag-items">
+                                                    <ul>
+                                                        <li>
+                                                            <a href="#" class="tag-item">Premiere Pro</a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="#" class="tag-item">Ads</a>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                            <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="https://drive.google.com/file/d/1USPIfIWa2FNMErRQitn6Ds3VdgIPLLHF/view?usp=sharing" target="_blank">
+                                                <span class="icon-reverse-wrapper">
+                                        <span class="btn-text">Play Video</span>
+                                                <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
+                                                <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
+                                                </span>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                               
                             </div>
                         </div>
                     </div>
