--- a/project.html
+++ b/project.html
@@ -597,15 +597,15 @@
                                 <div class="latest-portfolio-card-style-two image-box-hover tmp-scroll-trigger tmp-fade-in animation-order-3">
                                     <div class="portfoli-card-img">
                                         <div class="img-box v2">
-                                            <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="https://www.behance.net/gallery/216276167/HK-Cars-BuySellRental" target="_blank">
-                                                <img class="w-100" src="assets/images/latest-portfolio/web-img-3.jpg" alt="Thumbnail">
+                                            <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="https://www.behance.net/gallery/225543839/Parallax-Scrolling-Website-Prototype" target="_blank">
+                                                <img class="w-100" src="assets/images/latest-portfolio/web-img-7.jpg" alt="Thumbnail">
                                             </a>
                                         </div>
                                     </div>
                                     <div class="portfolio-card-content-wrap">
                                         <div class="content-left">
-                                            <h3 class="portfolio-card-title"><a href="https://www.behance.net/gallery/216276167/HK-Cars-BuySellRental" target="_blank">Buy Car & 
-                                                    Bike</a></h3>
+                                            <h3 class="portfolio-card-title"><a href="https://www.behance.net/gallery/225543839/Parallax-Scrolling-Website-Prototype" target="_blank">AI Parallex Scrolling Website  
+                                                    </a></h3>
                                             <div class="tag-items">
                                                 <ul>
                                                     <li>
@@ -614,10 +614,13 @@
                                                     <li>
                                                         <a href="#" class="tag-item">Landing page</a>
                                                     </li>
+                                                    <li>
+                                                        <a href="#" class="tag-item">Prototype</a>
+                                                    </li>
                                                 </ul>
                                             </div>
                                         </div>
-                                        <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="https://www.behance.net/gallery/216276167/HK-Cars-BuySellRental" target="_blank">
+                                        <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="https://www.behance.net/gallery/225543839/Parallax-Scrolling-Website-Prototype" target="_blank">
                                             <span class="icon-reverse-wrapper">
                                     <span class="btn-text">View design</span>
                                             <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
@@ -731,6 +734,40 @@
                                             </a>
                                         </div>
                                     </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="latest-portfolio-card-style-two image-box-hover tmp-scroll-trigger tmp-fade-in animation-order-7">
+                                    <div class="portfoli-card-img">
+                                        <div class="img-box v2">
+                                            <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="https://www.behance.net/gallery/216276167/HK-Cars-BuySellRental" target="_blank">
+                                                <img class="w-100" src="assets/images/latest-portfolio/web-img-3.jpg" alt="Thumbnail">
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="portfolio-card-content-wrap">
+                                        <div class="content-left">
+                                            <h3 class="portfolio-card-title"><a href="https://www.behance.net/gallery/216276167/HK-Cars-BuySellRental" target="_blank">Buy Car & 
+                                                    Bike</a></h3>
+                                            <div class="tag-items">
+                                                <ul>
+                                                    <li>
+                                                        <a href="#" class="tag-item">Figma</a>
+                                                    </li>
+                                                    <li>
+                                                        <a href="#" class="tag-item">Landing page</a>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                        <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="https://www.behance.net/gallery/216276167/HK-Cars-BuySellRental" target="_blank">
+                                            <span class="icon-reverse-wrapper">
+                                    <span class="btn-text">View design</span>
+                                            <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
+                                            <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
+                                            </span>
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
