--- a/index.html
+++ b/index.html
@@ -1593,6 +1593,34 @@
                     <div class="latest-portfolio-card-style-two tmponhover tmp-scroll-trigger tmp-fade-in animation-order-4">
                         <div class="portfoli-card-img">
                             <div class="img-box v2">
+                                <a href="https://coursera.org/share/1bb4989f705fae381c65ffc42038e663" target="_blank">
+                                    <img class="img-primary hidden-on-mobile" src="assets/images/latest-portfolio/cer-4.jpg" alt="Blog Thumbnail">
+                                    <img class="img-secondary" src="assets/images/latest-portfolio/cer-4.jpg" alt="BLog Thumbnail">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="portfolio-card-content-wrap">
+                            <div class="content-left">
+                                <h3 class="portfolio-card-title"><a href="https://coursera.org/share/1bb4989f705fae381c65ffc42038e663" target="_blank">Create High-Fidelity Designs and Prototypes</a>
+                                </h3>
+                                <div class="tag-items">
+                                    <ul>
+                                        <li>
+                                            <a href="#" class="tag-item">Coursera</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="tag-item">Online</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-12">
+                    <div class="latest-portfolio-card-style-two tmponhover tmp-scroll-trigger tmp-fade-in animation-order-5">
+                        <div class="portfoli-card-img">
+                            <div class="img-box v2">
                                 <a href="https://www.udemy.com/certificate/UC-76c3d113-84ba-487c-96ce-68c22959429f/" target="_blank">
                                     <img class="img-primary hidden-on-mobile" src="assets/images/latest-portfolio/portfoli-img-5.jpg" alt="Blog Thumbnail">
                                     <img class="img-secondary" src="assets/images/latest-portfolio/portfoli-img-5.jpg" alt="BLog Thumbnail">
@@ -1618,7 +1646,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-12">
-                    <div class="latest-portfolio-card-style-two tmponhover tmp-scroll-trigger tmp-fade-in animation-order-5">
+                    <div class="latest-portfolio-card-style-two tmponhover tmp-scroll-trigger tmp-fade-in animation-order-6">
                         <div class="portfoli-card-img">
                             <div class="img-box v2">
                                 <a href="https://drive.google.com/file/d/16_VhoBVNEhYWIecKq-TxkebIdt-y0arr/view?usp=sharing" target="_blank">
