--- a/index.html
+++ b/index.html
@@ -1509,7 +1509,7 @@
                     <div class="latest-portfolio-card-style-two tmponhover tmp-scroll-trigger tmp-fade-in animation-order-1">
                         <div class="portfoli-card-img">
                             <div class="img-box v2">
-                                <a href="https://drive.google.com/file/d/1il2sJuswU6sl9NrvWqTOFLz97XYKfKKk/view?usp=sharing" target="_blank">
+                                <a href="https://coursera.org/share/17ccfccd337afdf7fa944b6528870743" target="_blank">
                                     <img class="img-primary hidden-on-mobile" src="assets/images/latest-portfolio/cer-1.jpg" alt="Blog Thumbnail">
                                     <img class="img-secondary" src="assets/images/latest-portfolio/cer-1.jpg" alt="BLog Thumbnail">
                                 </a>
@@ -1517,7 +1517,7 @@
                         </div>
                         <div class="portfolio-card-content-wrap">
                             <div class="content-left">
-                                <h3 class="portfolio-card-title"><a href="https://drive.google.com/file/d/1il2sJuswU6sl9NrvWqTOFLz97XYKfKKk/view?usp=sharing" target="_blank">Foundations of User Experience (UX) Design</a>
+                                <h3 class="portfolio-card-title"><a href="https://coursera.org/share/17ccfccd337afdf7fa944b6528870743" target="_blank">Foundations of User Experience (UX) Design</a>
                                 </h3>
                                 <div class="tag-items">
                                     <ul>
@@ -1537,7 +1537,7 @@
                     <div class="latest-portfolio-card-style-two tmponhover tmp-scroll-trigger tmp-fade-in animation-order-2">
                         <div class="portfoli-card-img">
                             <div class="img-box v2">
-                                <a href="https://drive.google.com/file/d/1jtpdjKtY0hADR8NerNNlIjpTfnO9la-Y/view?usp=sharing" target="_blank">
+                                <a href="https://coursera.org/share/1fe4eea1f325e16411888153fa7d1993" target="_blank">
                                     <img class="img-primary hidden-on-mobile" src="assets/images/latest-portfolio/cer-2.jpg" alt="Blog Thumbnail">
                                     <img class="img-secondary" src="assets/images/latest-portfolio/cer-2.jpg" alt="BLog Thumbnail">
                                 </a>
@@ -1545,7 +1545,7 @@
                         </div>
                         <div class="portfolio-card-content-wrap">
                             <div class="content-left">
-                                <h3 class="portfolio-card-title"><a href="https://drive.google.com/file/d/1jtpdjKtY0hADR8NerNNlIjpTfnO9la-Y/view?usp=sharing" target="_blank">Start the UX Design Process: Empathize, Define, and Ideate</a>
+                                <h3 class="portfolio-card-title"><a href="https://coursera.org/share/1fe4eea1f325e16411888153fa7d1993" target="_blank">Start the UX Design Process: Empathize, Define, and Ideate</a>
                                 </h3>
                                 <div class="tag-items">
                                     <ul>
@@ -1565,7 +1565,7 @@
                     <div class="latest-portfolio-card-style-two tmponhover tmp-scroll-trigger tmp-fade-in animation-order-3">
                         <div class="portfoli-card-img">
                             <div class="img-box v2">
-                                <a href="https://drive.google.com/file/d/1znDjOD2M8LS4mCAC8HN45CVxOIPQCrBD/view?usp=sharing" target="_blank">
+                                <a href="https://coursera.org/share/7199575fb74b528344dedb410bab0984" target="_blank">
                                     <img class="img-primary hidden-on-mobile" src="assets/images/latest-portfolio/cer-3.jpg" alt="Blog Thumbnail">
                                     <img class="img-secondary" src="assets/images/latest-portfolio/cer-3.jpg" alt="BLog Thumbnail">
                                 </a>
@@ -1573,7 +1573,7 @@
                         </div>
                         <div class="portfolio-card-content-wrap">
                             <div class="content-left">
-                                <h3 class="portfolio-card-title"><a href="https://drive.google.com/file/d/1znDjOD2M8LS4mCAC8HN45CVxOIPQCrBD/view?usp=sharing" target="_blank">Build Wireframes and Low-Fidelity Prototypes</a>
+                                <h3 class="portfolio-card-title"><a href="https://coursera.org/share/7199575fb74b528344dedb410bab0984" target="_blank">Build Wireframes and Low-Fidelity Prototypes</a>
                                 </h3>
                                 <div class="tag-items">
                                     <ul>
