--- a/project.html
+++ b/project.html
@@ -304,14 +304,14 @@
                                 <div class="latest-portfolio-card-style-two image-box-hover tmp-scroll-trigger tmp-fade-in animation-order-2">
                                     <div class="portfoli-card-img">
                                         <div class="img-box v2">
-                                            <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="https://www.behance.net/harshankrishdev" target="_blank">
+                                            <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="https://www.behance.net/gallery/226097311/Women-Safety-SOS-App" target="_blank">
                                                 <img class="w-100" src="assets/images/latest-portfolio/mob-img-2.jpg" alt="Thumbnail">
                                             </a>
                                         </div>
                                     </div>
                                     <div class="portfolio-card-content-wrap">
                                         <div class="content-left">
-                                            <h3 class="portfolio-card-title"><a href="https://www.behance.net/harshankrishdev" target="_blank">Women Safety
+                                            <h3 class="portfolio-card-title"><a href="https://www.behance.net/gallery/226097311/Women-Safety-SOS-App" target="_blank">Women Safety
                                                     SOS</a></h3>
                                             <div class="tag-items">
                                                 <ul>
@@ -327,7 +327,7 @@
                                                 </ul>
                                             </div>
                                         </div>
-                                        <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="https://www.behance.net/harshankrishdev" target="_blank">
+                                        <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="https://www.behance.net/gallery/226097311/Women-Safety-SOS-App" target="_blank">
                                             <span class="icon-reverse-wrapper">
                                     <span class="btn-text">View design</span>
                                             <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
